--- a/.github/workflows/gold.yml
+++ b/.github/workflows/gold.yml
@@ -3,7 +3,7 @@ name: Send Gold Price
 on:
   schedule:
     - cron: "0 * * * *"   # every hour
-  workflow_dispatch:      # manual run button
+  workflow_dispatch:
 
 jobs:
   run:
@@ -18,10 +18,10 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install libraries
+      - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run script
+      - name: Run gold price bot
         run: python send.py
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
