--- a/.github/workflows/gold.yml
+++ b/.github/workflows/gold.yml
@@ -2,27 +2,28 @@ name: Send Gold Price
 
 on:
   schedule:
-    - cron: "0 * * * *"   # every hour
+    - cron: '5 * * * *'   # every hour (UTC) at minute 5
   workflow_dispatch:
 
 jobs:
-  run:
+  run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: 📥 Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+      - name: 📦 Install dependencies
+        run: |
+          pip install yfinance pyTelegramBotAPI
 
-      - name: Run gold price bot
-        run: python send.py
+      - name: 🚀 Run bot
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
+        run: python send.py
