--- a/.github/workflows/gold.yml
+++ b/.github/workflows/gold.yml
@@ -2,9 +2,7 @@ name: Send Gold Price
 
 on:
   schedule:
-    # Cambodia = UTC+7
-    # This runs every hour at minute 5 (Cambodia time)
-    - cron: '5 * * * *'
+    - cron: '5 * * * *'  # every hour at minute 5 UTC
   workflow_dispatch:
 
 jobs:
@@ -12,24 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Get your code
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2. Setup Python
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # 3. Install dependencies
       - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install yfinance pyTelegramBotAPI pytz
 
-      # 4. Run bot (with retry)
-      - name: Run bot (auto retry)
+      - name: Run Gold Bot
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
@@ -39,6 +33,6 @@ jobs:
           do
             echo "Attempt $i..."
             python send.py && break
-            echo "Retry in 10 seconds..."
+            echo "Retry in 10s..."
             sleep 10
           done
