--- a/.github/workflows/gold.yml
+++ b/.github/workflows/gold.yml
@@ -2,7 +2,7 @@ name: Send Gold Price
 
 on:
   schedule:
-    - cron: '5 * * * *'  # every hour at minute 5 UTC
+    - cron: '5 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Python
@@ -20,19 +20,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install yfinance pyTelegramBotAPI pytz
+          pip install yfinance pyTelegramBotAPI
 
-      - name: Run Gold Bot
+      - name: Run bot
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           ADMIN_CHAT_ID: ${{ secrets.ADMIN_CHAT_ID }}
-        run: |
-          for i in 1 2 3
-          do
-            echo "Attempt $i..."
-            python send.py && break
-            echo "Retry in 10s..."
-            sleep 10
-          done
+        run: python send.py
